--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^4.0.1",
     "koa-jwt": "^3.6.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
+    "koa2-connect-history-api-fallback": "^0.1.2",
     "load-vue": "0.0.1",
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
